# Compathic

./: .gitignore  CMakeLists.txt  bot.cfg.example
src/: botConfig.cpp  botConfig.h  commandHandler.cpp  commandHandler.h  main.cpp
src/commands/: command.cpp  command.h  pingCommand.cpp  pingCommand.h
